--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bootstrap-vue": "^2.0.0-rc.19",
     "core-js": "^2.6.5",
     "firebase": "^5.10.1",
+    "moment": "^2.24.0",
     "vee-validate": "^2.2.5",
     "vue": "^2.6.10",
+    "vue-chat-scroll": "^1.3.5",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
